--- a/styles.css
+++ b/styles.css
@@ -49,26 +49,32 @@ img {
 }
 /* Profile section styles */
 .profile {
-    padding: 80px 0;
+    padding: 0;
 }
 
 .profile::after {
     content: "";
     display: block;
+    align-items: center;
     clear: both;
 }
 
 .profile-image {
     float: left;
-    width: calc(33.333% - 16px);
+    width: 35px; 
+    height:35vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 48px;
-}
-
+    margin: 0 115px;
+    padding-right: 35px;
+  }
 .profile-image img {
     border-radius: 50%;
+    border-style: solid;
+    border-color: #557813;
+    border-width: 10px; 
+    box-sizing: border-box; 
 }
 
 .profile-user-settings,
@@ -210,7 +216,7 @@ img {
 }
 
 /* Media queries for responsiveness */
-@media (max-width: 40rem) {
+@media (max-width: 16px) {
     .profile {
         grid-template-columns: auto 225px;
         grid-row-gap: 24px;
